# aki-mcycle

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  TODO.md  build.rs
docs/: review.1.md  review.2.md
docs/reviews/: 2026-06-01_code_review.3.md
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  mod.rs  parse.rs
tests/: helper.rs  helper_l.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
xtask/src/: aki-mcycle-cmd.txt  cmd.txt  gen_src_cmd.rs
