[package]
name = "aki-mcycle"
version = "0.1.10"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
mark up text with cycling color
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-mcycle"

[lib]
name = "libaki_mcycle"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-mcycle"
path = "src/main.rs"

[features]
default = []

[dependencies]
regex = "1.3"
anyhow = "1.0"
simple-error = "0.2"
flood-tide = { version="0.1", default-features=true, features=["stop_at_mm"] }
runnel = "0.1"

[dev-dependencies]

[build-dependencies]
rustc_version = "=0.2.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = []
section = "AAA-admin"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is mark up text with cycling color.
"""
depends = "$auto"
assets = [
    ["target/release/aki-mcycle", "usr/bin/", "755"],
]
