[package]
name = "aki-mcycle"
version = "0.1.29"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
mark up text with cycling color
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.65.0"
repository = "https://github.com/aki-akaguma/aki-mcycle"

[lib]
name = "libaki_mcycle"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-mcycle"
path = "src/main.rs"

[features]
default = []
debian_build = []

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
regex = "1.11"
runnel = "0.4"
memx-cdy = "0.1"

[dev-dependencies]
indoc = "2.0"
exec-target = "0.2"

[build-dependencies]
rust-version-info-file = "0.2"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is mark up text with cycling color.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-mcycle", "usr/bin/", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-mcycle/", "644"],
    ["README.md", "usr/share/doc/aki-mcycle/", "644"],
]
